fixed favicon url

--- a/html/a-la-francaise.html
+++ b/html/a-la-francaise.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Margaux Armanet">
     <meta name="keywords" content="restaurants, menus, paris">
     <meta name="description" content="Réservez le menu qui vous convient">
-    <link rel="shortcut icon" href="images/logo/ohmyfood@2x.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo/ohmyfood@2x.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/main.css">
     <title>Ohmyfood - Menu À la française</title>
 </head>
